@@ -932,7 +932,7 @@ sp-titanium-ore=Titanium ore
 sp-titanium-plate=Titanium plate
 sp-titanium-sponge=Titanium sponge
 sp-titanium-telluride=Titanium telluride
-sp-train-boige=Train boige
+sp-train-bogie=Train bogie
 sp-transformer=Transformer
 sp-transistor=Transistor
 sp-trapped-quantum-energy=Trapped quantum energy
@@ -1950,7 +1950,7 @@ sp-titanium-plate=Titanium plate
 sp-titanium-sponge=Titanium sponge
 sp-titanium-telluride=Titanium telluride
 sp-toluene=Toluene
-sp-train-boige=Train boige
+sp-train-bogie=Train bogie
 sp-transformer=Transformer
 sp-transistor=Transistor
 sp-trapped-quantum-energy=Trapped quantum energy
