@@ -919,7 +919,7 @@ sp-titanium-ore=チタン鉱石
 sp-titanium-plate=チタンの板
 sp-titanium-sponge=スポンジチタン
 sp-titanium-telluride=テルル化チタン
-sp-train-boige=鉄道車両の台車
+sp-train-bogie=鉄道車両の台車
 sp-transformer=変圧器
 sp-transistor=トランジスタ
 sp-trapped-quantum-energy=閉じ込められた量子エネルギー
@@ -1905,7 +1905,7 @@ sp-titanium-plate=チタンの板
 sp-titanium-sponge=スポンジチタン
 sp-titanium-telluride=テルル化チタン
 sp-toluene=トルエン
-sp-train-boige=鉄道車両の台車
+sp-train-bogie=鉄道車両の台車
 sp-transformer=変圧器
 sp-transistor=トランジスタ
 sp-trapped-quantum-energy=閉じ込められた量子エネルギー
