@@ -683,7 +683,7 @@ sp-titanium-nitride=Azotek tytanu
 sp-titanium-ore=Ruda tytanu
 sp-titanium-plate=Płyta tytanowa
 sp-titanium-sponge=Gąbka tytanowa
-sp-train-boige=Wózek pociągu
+sp-train-bogie=Wózek pociągu
 sp-transformer=Transformator
 sp-transistor=Tranzystor
 sp-trapped-quantum-energy=Uwięziona energia kwantowa
@@ -1390,7 +1390,7 @@ sp-titanium-nitride=Azotek tytanu
 sp-titanium-ore-from-acrocrystal=Ruda tytanu z akrokryształu
 sp-titanium-plate=Płytka tytanowa
 sp-titanium-sponge=Gąbka tytanowa
-sp-train-boige=Wózek pociągu
+sp-train-bogie=Wózek pociągu
 sp-transformer=Transformator
 sp-transistor=Tranzystor
 sp-trapped-quantum-energy=Uwięziona energia kwantowa
