@@ -784,7 +784,7 @@ sp-titanium-nitride=氮化钛
 sp-titanium-ore=钛矿
 sp-titanium-plate=钛板
 sp-titanium-sponge=海绵钛
-sp-train-boige=火车转向架
+sp-train-bogie=火车转向架
 sp-transformer=变压器
 sp-transistor=晶体管
 sp-trapped-quantum-energy=捕获的量子能量
@@ -1588,7 +1588,7 @@ sp-titanium-ore-from-acrocrystal=顶晶制钛矿
 sp-titanium-plate=钛板
 sp-titanium-sponge=海绵钛
 sp-toluene=甲苯
-sp-train-boige=火车转向架
+sp-train-bogie=火车转向架
 sp-transformer=变压器
 sp-transistor=晶体管
 sp-trapped-quantum-energy=捕获的量子能量
